Bug 245574 - Konqueror crashed after setting back toolbars to default
Summary: Konqueror crashed after setting back toolbars to default
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.4.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 250426 257892 261173 280408 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-23 20:50 UTC by Johannes Schwall
Modified: 2012-01-09 04:53 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (7.57 KB, text/plain)
2012-01-04 11:26 UTC, Marius Kotsbak
Details
New crash information added by DrKonqi (6.05 KB, text/plain)
2012-01-05 15:55 UTC, Emmett Culley
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Schwall 2010-07-23 20:50:25 UTC
Application: konqueror (4.4.5 (KDE 4.4.5))
KDE Platform Version: 4.4.5 (KDE 4.4.5)
Qt Version: 4.6.3
Operating System: Linux 2.6.32-23-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
My konqueror toolbars were mixed up, so I chose to set them back to defaults and clicked on "accept" to save this. Just then konqueror crashed. After restarting and recovering the session the toolbars seem to be back to default ...

 -- Backtrace:
Application: Konqueror (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f4fd3488760 (LWP 4138))]

Thread 2 (Thread 0x7f4fbaab1710 (LWP 4223)):
#0  0x00007f4fd0473f83 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f4fcce364a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f4fcce368fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f4fd1a7c406 in QEventDispatcherGlib::processEvents (this=0x1555fc0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007f4fd1a516c2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f4fd1a51a9c in QEventLoop::exec (this=0x7f4fbaab0db0, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f4fd19608db in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007f4fd1a31dd8 in QInotifyFileSystemWatcherEngine::run (this=0x1b6c8a0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f4fd1962f95 in QThreadPrivate::start (arg=0x1b6c8a0) at thread/qthread_unix.cpp:248
#9  0x00007f4fd16d29ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007f4fd04806fd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f4fd3488760 (LWP 4138)):
[KCrash Handler]
#5  QComboBox::lineEdit (this=0x0) at widgets/qcombobox.cpp:1749
#6  0x00007f4fc7008703 in KonqMainWindow::checkDisableClearButton (this=0x1559160) at ../../../../apps/konqueror/src/konqmainwindow.cpp:3021
#7  0x00007f4fc70088c3 in KonqMainWindow::slotConfigureToolbars (this=0x1559160) at ../../../../apps/konqueror/src/konqmainwindow.cpp:1852
#8  0x00007f4fc70282cd in KonqMainWindow::qt_metacall (this=0x1559160, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x26fb370) at ./konqmainwindow.moc:385
#9  0x00007f4fd1a62b79 in QObject::event (this=0x1559160, e=0x2738b00) at kernel/qobject.cpp:1248
#10 0x00007f4fd0c4556f in QWidget::event (this=0x1559160, event=0x2738b00) at kernel/qwidget.cpp:8501
#11 0x00007f4fd1009f8b in QMainWindow::event (this=0x1559160, event=0x2738b00) at widgets/qmainwindow.cpp:1414
#12 0x00007f4fd20b2f63 in KXmlGuiWindow::event (this=0x0, ev=0x0) at ../../kdeui/xmlgui/kxmlguiwindow.cpp:131
#13 0x00007f4fc702978c in KonqMainWindow::event (this=0x1559160, e=0x2738b00) at ../../../../apps/konqueror/src/konqmainwindow.cpp:5676
#14 0x00007f4fd0befc0c in QApplicationPrivate::notify_helper (this=0x13e2280, receiver=0x1559160, e=0x2738b00) at kernel/qapplication.cpp:4302
#15 0x00007f4fd0bf60eb in QApplication::notify (this=0x7fff957d7280, receiver=0x1559160, e=0x2738b00) at kernel/qapplication.cpp:4185
#16 0x00007f4fd1f9ba16 in KApplication::notify (this=0x7fff957d7280, receiver=0x1559160, event=0x2738b00) at ../../kdeui/kernel/kapplication.cpp:302
#17 0x00007f4fd1a52d9c in QCoreApplication::notifyInternal (this=0x7fff957d7280, receiver=0x1559160, event=0x2738b00) at kernel/qcoreapplication.cpp:726
#18 0x00007f4fd1a56454 in QCoreApplication::sendEvent (receiver=0x0, event_type=<value optimized out>, data=0x1344c30) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#19 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=<value optimized out>, data=0x1344c30) at kernel/qcoreapplication.cpp:1367
#20 0x00007f4fd1a7c873 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#21 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#22 0x00007f4fcce328c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#23 0x00007f4fcce36748 in ?? () from /lib/libglib-2.0.so.0
#24 0x00007f4fcce368fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#25 0x00007f4fd1a7c3b3 in QEventDispatcherGlib::processEvents (this=0x1346140, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#26 0x00007f4fd0ca018e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#27 0x00007f4fd1a516c2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#28 0x00007f4fd1a51a9c in QEventLoop::exec (this=0x7fff957d6f80, flags=) at kernel/qeventloop.cpp:201
#29 0x00007f4fd1a5673b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#30 0x00007f4fc704f036 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../../../apps/konqueror/src/konqmain.cpp:271
#31 0x00000000004070f3 in launch (argc=2, _name=<value optimized out>, args=<value optimized out>, cwd=<value optimized out>, envc=16, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x139d8f4 "sinatra;1279910791;838869;1448_TIME8725773") at ../../kinit/kinit.cpp:717
#32 0x0000000000407cb0 in handle_launcher_request (sock=8, who=<value optimized out>) at ../../kinit/kinit.cpp:1209
#33 0x000000000040823a in handle_requests (waitForPid=0) at ../../kinit/kinit.cpp:1402
#34 0x0000000000408e22 in main (argc=4, argv=<value optimized out>, envp=<value optimized out>) at ../../kinit/kinit.cpp:1845

Reported using DrKonqi
Comment 1 Tommi Tervo 2010-11-25 17:15:22 UTC
*** Bug 257892 has been marked as a duplicate of this bug. ***
Comment 2 Frank Reininghaus 2010-12-15 20:44:03 UTC
From bug 257892:

-- Information about the crash:
After adding/removing elements in toolbars, and pressing OK button, konqueror
crashes. Every time.
Comment 3 Frank Reininghaus 2010-12-15 20:44:55 UTC
*** Bug 250426 has been marked as a duplicate of this bug. ***
Comment 4 Frank Reininghaus 2010-12-15 21:42:03 UTC
I tried to reproduce, but changing Konqueror's toolbar works fine here (4.4.4 and current trunk).
Comment 5 Pino Toscano 2010-12-25 11:14:58 UTC
*** Bug 261173 has been marked as a duplicate of this bug. ***
Comment 6 Dave Plater 2010-12-25 17:45:54 UTC
Maybe this bug is more exposed and easier to fix in 4.6 RC1. To reproduce :
a) Open konqueror, mine opens with three man pages in three tabs and no location bar showing.
b) Right click on the main toolbar and select configure.
c) The location bar is displayed as being in place so I shift it one place down and press apply, no location bar is displayed so I click OK and after the config window closes konqueror crashes.

I've just tried this without moving the location bar location and no crash then if I move <merge> down the text for the location bar shifts left on "apply" and konqueror crashes on "OK". When I restart konqueror everything is as it was before configure.
Comment 7 Dawit Alemayehu 2011-11-21 14:44:09 UTC
I cannot reproduce this with Konqueror in the latest KDE 4.7 release. Does anyone still see this crash in a more recent version of Konqueror, v4.7 and up ? If so, can you please provide a new backtrace ?
Comment 8 Dawit Alemayehu 2011-11-21 20:16:27 UTC
*** Bug 280408 has been marked as a duplicate of this bug. ***
Comment 9 Marius Kotsbak 2012-01-04 11:26:57 UTC
Created attachment 67450 [details]
New crash information added by DrKonqi

konqueror (4.7.3 (4.7.3)) on KDE Platform 4.7.3 (4.7.3) using Qt 4.7.4

Edited toolbar. KDE 4.7.3 on an upgraded Kubuntu.

-- Backtrace (Reduced):
#7  0xb66a5f94 in QComboBox::lineEdit (this=0x0) at widgets/qcombobox.cpp:1771
#8  0xb02895b5 in KonqMainWindow::checkDisableClearButton (this=0x82b30f8) at ../../../konqueror/src/konqmainwindow.cpp:2906
#9  0xb02896c7 in KonqMainWindow::slotConfigureToolbars (this=0x82b30f8) at ../../../konqueror/src/konqmainwindow.cpp:1803
#10 0xb028d2d4 in KonqMainWindow::qt_metacall (this=0x82b30f8, _c=QMetaObject::InvokeMetaMethod, _id=47, _a=0x85b8bb0) at ./konqmainwindow.moc:383
#11 0xb6d52b7d in metacall (argv=0x85b8bb0, idx=97, cl=QMetaObject::InvokeMetaMethod, object=0x82b30f8) at kernel/qmetaobject.cpp:237
Comment 10 Emmett Culley 2012-01-05 15:55:23 UTC
Created attachment 67484 [details]
New crash information added by DrKonqi

konqueror (4.7.4 (4.7.4)) on KDE Platform 4.7.4 (4.7.4) using Qt 4.8.0

- What I was doing when the application crashed:

Changing the Toolbar.  I had recently clicked on the "defaults" button by mistake and was resetting the toolbars back to where I wanted them. 

The location bar was empty and I was trying to ad it back.

-- Backtrace (Reduced):
#6  QComboBox::lineEdit (this=0x0) at widgets/qcombobox.cpp:1783
#7  0x00000035efe93759 in KonqMainWindow::checkDisableClearButton (this=0x26679a0) at /usr/src/debug/kde-baseapps-4.7.4/konqueror/src/konqmainwindow.cpp:2903
#8  0x00000035efe93822 in KonqMainWindow::slotConfigureToolbars (this=0x26679a0) at /usr/src/debug/kde-baseapps-4.7.4/konqueror/src/konqmainwindow.cpp:1800
#9  0x00000035efe967ba in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=0x26679a0, _c=<optimized out>) at /usr/src/debug/kde-baseapps-4.7.4/x86_64-redhat-linux-gnu/konqueror/src/konqmainwindow.moc:356
#10 KonqMainWindow::qt_static_metacall (_o=0x26679a0, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kde-baseapps-4.7.4/x86_64-redhat-linux-gnu/konqueror/src/konqmainwindow.moc:303
Comment 11 Dawit Alemayehu 2012-01-09 04:52:55 UTC
Git commit 54e035f08880bc4b5691a19e3da8d1e631fec9bd by Dawit Alemayehu.
Committed on 09/01/2012 at 05:20.
Pushed by adawit into branch 'KDE/4.8'.

Check m_combo for NULL before accessing it.
FIXED-IN: 4.8.1

M  +3    -2    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/54e035f08880bc4b5691a19e3da8d1e631fec9bd
Comment 12 Dawit Alemayehu 2012-01-09 04:53:27 UTC
Git commit b31a520282cc68d51472dc9a3000d1881c331ede by Dawit Alemayehu.
Committed on 09/01/2012 at 05:20.
Pushed by adawit into branch 'master'.

Check m_combo for NULL before accessing it.
FIXED-IN: 4.8.1
(cherry picked from commit 54e035f08880bc4b5691a19e3da8d1e631fec9bd)

M  +3    -2    konqueror/src/konqmainwindow.cpp

http://commits.kde.org/kde-baseapps/b31a520282cc68d51472dc9a3000d1881c331ede