Check m_combo for NULL before accessing it.

BUG: 245574
FIXED-IN: 4.8.1
(cherry picked from commit 54e035f08880bc4b5691a19e3da8d1e631fec9bd)